@@ -36,6 +36,7 @@ typedef enum
     MACHINE_MACBOOKPRO_4,
     MACHINE_MACBOOKPRO_5,
     MACHINE_MACBOOKPRO_6,
+    MACHINE_MACBOOKPRO_7,
 
     MACHINE_MACBOOK_1,
     MACHINE_MACBOOK_2,
